<resources>
    <string name="app_name">Python on Android</string>
    <string name="startGameBtn_txt">New Game</string>
    <string name="scoreboardBtn_txt">Scoreboard</string>
    <string name="optionsBtn_txt">Options</string>
    <string name="logoutBtn_txt">Logout</string>
    <string name="score_place_holder_txt">SCORE: %.2f</string>
    <string name="game_over_dialog_score">Your score: %.2f</string>
    <string name="options_style_title_txt">Style</string>
    <string name="options_themes_txt">Themes</string>
    <string name="options_snake_color_txt">Snake color</string>
    <string name="options_food_color_txt">Food color</string>
    <string name="options_game_settings_txt">Game settings</string>
    <string name="options_control_sensibility_txt">Control sensibility</string>
    <string name="options_snake_speed_txt">Snake speed</string>
    <string name="options_language_txt">Language</string>
    <string name="rd_light_label_txt">Light</string>
    <string name="rd_dark_label_txt">Dark</string>
    <string name="rd_system_label_txt">System</string>
    <string name="color_btn_placeHolder" translatable="false">#FFFF</string>
    <string name="snake_color_picker_title">Pick Snake Color</string>
    <string name="food_color_picker_title">Pick Food Color</string>
    <string name="save_speed_toast">New Snake speed is: %d</string>
    <string name="save_sensibility_toast">New Control sensibility is: %d</string>
    <string name="login_failed_toast">Login failed: %s</string>
    <string name="game_over_dialog_back_to_menu">Back to menu</string>
    <string name="game_over_dialog_title">Game Over!</string>
    <string name="dbURL" translatable="false">https://python-on-android-default-rtdb.europe-west1.firebasedatabase.app/</string>
    <string name="score_multiplier" translatable="false">Score Multiplier:</string>
    <string name="scoreMultiplierDefault" translatable="false">1x</string>
    <string name="score_multiplier_game" translatable="false">Score Multiplier: %.2f</string>
    <string-array name="languages_string_array">
        <item name="en">en</item>
        <item name="de">de</item>
    </string-array>
</resources>