<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/optionsActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.OptionsActivity">


    <TextView
        style="@style/optionsTitles"
        android:id="@+id/options_title_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options_style_title_txt" />

    <TextView
        style="@style/optionsSubTitles"
        android:id="@+id/options_themes_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options_themes_txt" />

    <RadioGroup
        style="@style/optionsControl"
        android:id="@+id/options_themes_rd_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/options_themes_rb_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rd_light_label_txt" />

        <RadioButton
            android:id="@+id/options_themes_rb_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rd_dark_label_txt" />

        <RadioButton
            android:id="@+id/options_themes_rb_system"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rd_system_label_txt" />


    </RadioGroup>

    <TextView
        style="@style/optionsSubTitles"
        android:id="@+id/options_snake_color_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options_snake_color_txt" />

    <Button
        style="@style/optionsControl"
        android:id="@+id/options_snake_color_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/color_btn_placeHolder" />

    <TextView
        style="@style/optionsSubTitles"
        android:id="@+id/options_food_color_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options_food_color_txt" />

    <Button
        style="@style/optionsControl"
        android:id="@+id/options_food_color_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/color_btn_placeHolder" />

    <View
        style="@style/optionsDivider"
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:background="?android:attr/listDivider" />

    <TextView
        style="@style/optionsTitles"
        android:id="@+id/options_game_settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options_game_settings_txt" />

    <TextView
        style="@style/optionsSubTitles"
        android:id="@+id/options_control_sensibility_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options_control_sensibility_txt" />

    <SeekBar
        android:id="@+id/options_control_sensibility_seekBar"
        style="@style/optionsSeekBarDiscrete"
        android:max="2"
        android:min="0"
        android:progress="1" />

    <TextView
        style="@style/optionsSubTitles"
        android:id="@+id/options_snake_speed_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options_snake_speed_txt" />

    <SeekBar
        android:id="@+id/options_snake_speed_seekBar"
        style="@style/optionsSeekBar"
        android:max="299"
        android:min="1"
        android:progress="150" />

    <View
        style="@style/optionsDivider"
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:background="?android:attr/listDivider" />

    <TextView
        style="@style/optionsTitles"
        android:id="@+id/options_language_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options_language_txt" />

    <Spinner
        style="@style/optionsControl"
        android:id="@+id/options_language_drop_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/languages_string_array" />
</LinearLayout>