<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MenuActivity">

    <Button
        style="@style/menuButtons"
        android:id="@+id/startGameBtn"
        android:layout_height="wrap_content"
        android:text="@string/startGameBtn_txt"
        app:layout_constraintBottom_toTopOf="@+id/scoreBoardBtn"
        app:layout_constraintEnd_toEndOf="@+id/scoreBoardBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/scoreBoardBtn" />

    <Button
        style="@style/menuButtons"
        android:id="@+id/scoreBoardBtn"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/scoreboardBtn_txt"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        style="@style/menuButtons"
        android:id="@+id/optionsBtn"
        android:layout_height="wrap_content"
        android:text="@string/optionsBtn_txt"
        app:layout_constraintEnd_toEndOf="@+id/scoreBoardBtn"
        app:layout_constraintStart_toStartOf="@+id/scoreBoardBtn"
        app:layout_constraintTop_toBottomOf="@+id/scoreBoardBtn" />

    <Button
        style="@style/menuButtons"
        android:id="@+id/logoutBtn"
        android:layout_height="wrap_content"
        android:text="@string/logoutBtn_txt"
        app:layout_constraintEnd_toEndOf="@+id/optionsBtn"
        app:layout_constraintStart_toStartOf="@+id/optionsBtn"
        app:layout_constraintTop_toBottomOf="@+id/optionsBtn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>